--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Jaren Escueta",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.15.2",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
