--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple react app",
   "main": "index.js",
   "scripts": {
+    "watch": "./node_modules/webpack/bin/webpack.js -w",
     "build": "./node_modules/webpack/bin/webpack.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
